Implement React frontend integration
Add a React/Vite frontend shell with backend proxy configuration, OAuth success redirection to the frontend, authenticated current-account display, inbox thread detail loading with Gmail message parsing, and connected views for compose, templates, groups, scheduled messages, tracking, screener, security, and trust controls. Cover inbox thread detail and Gmail parsing with focused tests.